--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             <div role="tabpanel">
                 <span class="form-inline pull-right">
 
+                    <!-- load up example data -->
+                    <div class="input-group">
+                    <button id="load-example" class="btn btn-info" type="button" >
+                        <span class="glyphicon glyphicon-education" aria-hidden="true"></span> Load Example
+                    </button>
+                    </div>
+
                     <!-- change map pin/node radius -->
                     <div class="input-group">
                         <span class="input-group-addon" id="basic-addon1">
@@ -51,7 +58,7 @@
                         <input class="form-control" type="number" min="10" max="50" id="node-radius" name="node-radius">
                     </div>
 
-                    <!-- change background image url radius -->
+                    <!-- change background image (url) -->
                     <form id="graph-bg-url-form" class="form-inline">
                     <div class="input-group">
                         <span id="graph-bg-url-button" class="input-group-addon" id="basic-addon1">
@@ -61,7 +68,7 @@
                     </div>
                     </form>
 
-                    <!-- change background image file radius -->
+                    <!-- change background image (file) -->
                     <div class="input-group">
                         <span id="graph-bg-file-button" class="input-group-addon" id="basic-addon1">
                             <span class="glyphicon glyphicon-open-file" aria-hidden="true"></span>
@@ -162,14 +169,28 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="bs-callout borderless">
-                                        <span class="datamgr btn-info btn btn-default btn-file glyphicon glyphicon-export">
-                                            <span class="export"><strong>EXPORT</strong></span>
+
+                                        <span class="form-inline pull-right">
+
+                                            <!-- export data button -->
+                                            <div class="input-group">
+                                                <button id="export-data-button" class="btn btn-primary" type="button" >
+                                                    <span class="glyphicon glyphicon-export" aria-hidden="true"></span> Export Data
+                                                </button>
+                                            </div>
+
+                                            <!-- import data button -->
+                                            <div class="input-group">
+                                                <button id="import-data-button" class="btn btn-warning" type="button" >
+                                                    <span class="glyphicon glyphicon-import" aria-hidden="true"></span> Import Data
+                                                </button>
+                                                <input id="import-data-file-chooser" class="form-control hidden" type="file" name="import-data-file"  enctype="multipart/form-data">
+                                            </div>
+
                                         </span>
-                                        <span class="datamgr btn-warning btn btn-default btn-file glyphicon glyphicon-import">
-                                            <strong>IMPORT</strong>
-                                            <input type="file" class="import" name="data-import" enctype="multipart/form-data">
-                                        </span>
-                                    </div><!-- /bs-callout -->
+
+                                    </div>
+
                                     <div class="well">
                                         <h4>Graph Nodes</h4>
                                         <div id="nodes-table"></div>
